--- a/css/style.css
+++ b/css/style.css
@@ -23,7 +23,7 @@ body {
     color: #000000;
     line-height: 1;
     background-color: #ffffff;
-    background-image: url(images/bobobo.jpg);"
+    background-image: url(images/bobobo.jpg);
 }
 
 img {
