--- a/css/common.css
+++ b/css/common.css
@@ -64,6 +64,38 @@ img {
     font-family: 'Cherry Bomb One', cursive;
 }
 
+@media (max-width: 800px) {
+    .site-menu ul {
+        display: block;
+        text-align: center;
+    }
+
+    .site-menu li {
+        margin-top: 20px;
+    }
+
+    .header {
+        position: fixed;
+        top: 0;
+        left: 0;
+        right: 0;
+        background-color: #ffffff;
+        height: 50px;
+        z-index: 10;
+        box-shadow: 0 3px 6px rgba(0, 0, 0, 0.1);
+    }
+
+    .header-inner {
+        padding-left: 20px;
+        padding-right: 20px;
+        height: 100%;
+    }
+
+    .header-logo {
+        width: 100px;
+    }
+}
+
 .footer {
     color: #ffffff;
     background-color: #24211b;
