--- a/css/common.css
+++ b/css/common.css
@@ -23,7 +23,6 @@ body {
     color: #000000;
     line-height: 1;
     background-color: #ffffff;
-    background-image: url(images/bobobo.jpg);
 }
 
 img {
@@ -89,10 +88,34 @@ img {
         padding-left: 20px;
         padding-right: 20px;
         height: 100%;
+        position: relative;
     }
 
     .header-logo {
         width: 100px;
+    }
+
+    .header-site-menu {
+        position: absolute;
+        top: 100%;
+        left: 0;
+        right: 0;
+        color: #ffffff;
+        background-color: #736e62;
+        padding-top: 30px;
+        padding-bottom: 50px;
+    }
+
+    .main {
+        padding-top: 50px;;
+    }
+
+    .footer-logo {
+        margin-top: 60px;
+    }
+
+    .copyright {
+        margin-top: 50px;
     }
 }
 
@@ -108,12 +131,12 @@ img {
 
 .footer-logo {
     display: block;
-    width: 235px;
+    width: 100px;
     margin-top: 90px;
 }
 
 .copyright {
-    font-size: 14px;
+    font-size: 14pt;
     font-weight: bold;
     margin-top: 90px;
 }
